--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -48,7 +48,7 @@
 
 	The HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046 provided funding for this research.
 
-	Finally, my wife and son provided support and inspiration.
+	Finally and most importantly, thanks to my wife and son for providing support and inspiration.
 }
 \def\myabstract{ %%ABSTRACT_START%%
 	Over 35 million people are living with human immunodeficiency virus (HIV-1). The mechanisms causing integrated provirus to become latent, the diversity of spliced viral transcripts and the cellular response to infection are not fully characterized and hinder the eradication of HIV-1. We applied high-throughput sequencing to investigate the effects of host chromatin on proviral latency and variation of expression and splicing in both the host and virus during infection.
