Printing problems with figure 1 in pacbio. replaced with journal jpg
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@10110 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/pacBio/pacBio.tex
+++ b/thesis/pacBio/pacBio.tex
@@ -23,7 +23,7 @@ The integrated HIV-1 provirus is $\approximately{}9700$ bp in length and has a s
 
 \begin{figure}
 	\centering
-	\includegraphics[width=.92\textwidth]{1.pdf}
+	\includegraphics[width=.92\textwidth]{F1_large.jpg}
 	\caption[Mapping the splice donors and acceptors of \hivEight{}]{Mapping the splice donors and acceptors of \hivEight{}. PacBio sequence reads of \hivEight{} cDNA from infected HOS-CD4-CCR5 (HOS) and \cdFour{} T cells were aligned to the \hivEight{} genome shown in (A). Exons of the conserved HIV-1 transcripts are colored according to the encoded gene. Conserved (black) and published cryptic (brown) splice donors (`D') and acceptors (`A') are shown. Gaps in HIV-1 sequence alignments with at least one end located at a published or verified splice donor or acceptor were defined as introns. For each base of the \hivEight{} genome, the number of sequence reads in which that base occurred at the \fivePrime{}-end (B) or \threePrime{}-end (C) of an intron is plotted for each cell type. Putative splice donors and acceptors were defined as loci that were found in at least 10 reads at the \fivePrime{}- and \threePrime{}-ends of introns in sequence alignments from T-cell infections. Regions containing splice sites are enlarged for clarity. Asterisks indicate putative splice sites that are adjacent to dinucleotides other than the consensus GT and AG.}
 	\label{figDonorAccept}
 \end{figure}
